--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             {
                 name: "Cheeseburger",
                 description: "Delicious beef patty with melted cheese, lettuce, and tomato.",
-                thumbnail: "cheeseburger-thumbnail.jpg",
-                glbModel: "cheeseburger.glb",
-                usdzModel: "cheeseburger.usdz"
+                thumbnail: "thumb.webp",
+                glbModel: "scene.glb",
+                usdzModel: "pi.usdz"
             },
             {
                 name: "Pizza Margherita",
